# RustAuthZ

./: Cargo.toml  Dockerfile  README.md  rustfmt.toml
.github/workflows/: check-and-lint.yaml
src/: configuration.rs  key_providers.rs  lib.rs  main.rs  startup.rs
src/errors/: errors.rs  mod.rs
src/jsonwebtokens/: jsonwebtokens.rs  mod.rs
src/key_providers/: key_providers.rs  mod.rs
src/models/: mod.rs  models.rs
src/routes/: mod.rs  validate.rs
src/state/: mod.rs  state.rs
src/validator/: mod.rs  validator.rs
tests/: health_check.rs
