[package]
name = "rust_authz"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

# Double square brackets as it's an array, can have multiple binaries
[[bin]]
path = "src/main.rs"
name = "rust_authz" 

[dependencies]
# We are using the latest beta release of actix-web
# that relies on tokio 1.x.x
# There is _some_ turbulence when working with betas,
# we are pinning a few other supporting packages to ensure
# compatibility.
actix-web = "=4.0.0-beta.8"
actix-http = "=3.0.0-beta.8"
# We need the optional `derive`feature to use `serde`'s procedural macros:
# `#[derive(Serialize)]`and `#[derive(Deserialize)]`.
serde = { version = "1", features = ["derive"]}
serde_json = "1"
config = "0.11.0"
env_logger = "0.9.0"
log = "0.4.14"
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "0.8.2", features = ["v4"] }
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.5"
jsonwebtoken = "7.2.0"
reqwest = {version = "0.11", features = ["blocking"]}
headers = "0.3.4"
async-trait = "0.1.51"

[dev-dependencies]
actix-rt = "2"
tokio = "1"
